{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 97,
  "lineage": "01ab88ba-a6e3-f415-ca7c-69bbfa2616e4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tcb_blog_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588338176709:internet-gateway/igw-0eb8bf58086dedf47",
            "id": "igw-0eb8bf58086dedf47",
            "owner_id": "588338176709",
            "tags": {
              "Name": "tcb_blog_igw"
            },
            "tags_all": {
              "Name": "tcb_blog_igw"
            },
            "vpc_id": "vpc-0bfa467fbfdf0e4e8"
          },
          "dependencies": [
            "aws_vpc.tcb_blog_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "tcb_blog_routetointernet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0eb8bf58086dedf47",
            "id": "r-rtb-0ad9a605395e2c1291080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ad9a605395e2c129",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tcb_blog_igw",
            "aws_route_table.tcb_blog_rt",
            "aws_vpc.tcb_blog_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tcb_blog_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588338176709:route-table/rtb-0ad9a605395e2c129",
            "id": "rtb-0ad9a605395e2c129",
            "owner_id": "588338176709",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eb8bf58086dedf47",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tcb_blog_rt"
            },
            "tags_all": {
              "Name": "tcb_blog_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bfa467fbfdf0e4e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tcb_blog_igw",
            "aws_vpc.tcb_blog_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tcb_blog_pub_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d892be7bfad6e53",
            "route_table_id": "rtb-0ad9a605395e2c129",
            "subnet_id": "subnet-0a6feb70fd15c0499"
          },
          "dependencies": [
            "aws_internet_gateway.tcb_blog_igw",
            "aws_route_table.tcb_blog_rt",
            "aws_subnet.tcb_blog_public_subnet",
            "aws_vpc.tcb_blog_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588338176709:security-group/sg-0f1e6190c5eb47dd6",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f1e6190c5eb47dd6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "588338176709",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bfa467fbfdf0e4e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tcb_blog_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tcb_blog_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588338176709:subnet/subnet-0a6feb70fd15c0499",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6feb70fd15c0499",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "588338176709",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tcb_blog_public_subnet"
            },
            "tags_all": {
              "Name": "tcb_blog_public_subnet"
            },
            "vpc_id": "vpc-0bfa467fbfdf0e4e8"
          },
          "dependencies": [
            "aws_vpc.tcb_blog_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tcb_blog_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588338176709:vpc/vpc-0bfa467fbfdf0e4e8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-074f352a8114ae4ae",
            "default_route_table_id": "rtb-071c1afd4728e3383",
            "default_security_group_id": "sg-03c30b395f79c373c",
            "dhcp_options_id": "dopt-29938552",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bfa467fbfdf0e4e8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-071c1afd4728e3383",
            "owner_id": "588338176709",
            "tags": {
              "Name": "tcb_blog_vpc"
            },
            "tags_all": {
              "Name": "tcb_blog_vpc"
            }
          }
        }
      ]
    }
  ]
}